2015-03-11  Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWeb/GSWConstants.m
	  downcase Header keys
2015-03-11  Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWeb/GSWHTTPIO.m
	  force header keys to lowercase
2014-07-04  Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWeb/GSWBody.m
	  fix initWithName:...
2014-07-01  Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWeb/GSWHyperlink.m
	  fix -appendAttribute:... for nil href value
2014-06-11  Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWeb/GSWAssociation.m
	  fix EOValidatedObjectUserInfoKey value	
2014-05-30  Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* nearly every file
	  get rid of RCS_ID
2014-05-30  Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWeb/GSWRadioButtonList.m
	  Remove escapeHTML association assign (done in GSWInput)
	* GSWeb/GSWCheckBoxList.m
	  Remove escapeHTML association assign (done in GSWInput)
	* GSWeb.framework/GSWInput.m
	  Fix -init...
2014-05-29  Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWDatabase/GSWHTMLDynamicElement.[hm]
	  add -hasNonURLAttributes
	  add -hasURLAttributes
	  add -hasConstantAttributes
	* GSWeb/GSWRadioButtonList.m
	  handle disabled association
	  handle other associations (like id, onChange, etc)
	* GSWeb/GSWCheckBoxList.m
	  handle disabled association
	  handle other associations (like id, onChange, etc)
2014-05-29  Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWDatabase/WODisplayGroup.m
	  add NSArray -objectsAtIndexesArray:
	  add NSArray -isEqualByObjectPointer:
	  fix -setSelectionIndexes:
2014-05-29  Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWeb/GSWConstants.[hm]
	  add GSWClassName_Component
	* GSWeb/GSWComponentDefinition.m
	  fix -componentClass to use GSWClassName_Component
2014-05-29  Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWDatabase/WODisplayGroup.m
	  respect GNUstep coding standard (curly brackets placement, indentation)
	  fix _deleteObject: (undo selectors)